# Structura

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STRUCTURA_UI_README.txt  Structura.py  Structura.spec  build.sh  pyproject.toml  pyrightconfig.json  run_preview.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: Structura.icns
docs/: STRUCTURA_UI_README.txt
docs/superpowers/plans/: 2026-03-26-ui-fixes.md  2026-03-28-video-metadata-columns.md
docs/superpowers/specs/: 2026-03-26-ui-fixes-design.md  2026-03-28-search-feature-design.md  2026-03-28-video-metadata-columns-design.md
src/: main.py
src/structura/: __init__.py  main.py
tests/: test_build_entrypoint.py  test_scan_snapshot.py
