[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structura"
version = "2.0.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pillow",
    "PySide6>=6.6.0,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.environment]
extra-paths = [
    ".",
    "src",
]

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ruff]
line-length = 88
target-version = "py314"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
